[package]
name = "news-rust"
version = "1"
edition = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.1.1", features = ["json"] }
serde = {version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
thiserror = "1.0.26"
url = "2.2.2"
reqwest = {version = "0.11.4", features = ["json"], optional = true }
colour = "0.6.0"
